# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.664 2006/10/02 20:41:53 wolf31o2 Exp $

  03 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/files/x86-F3.msg, livecd/files/x86-F4.msg, livecd/files/x86-F5.msg:
  Changed dobladecenter to slowusb.  Thanks to solar for pointing this out.

  03 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py, modules/stage4_target.py:
  Added a check to see if we have the tarball option enabled, which causes
  catalyst to run the capture sequence. This was requested by Tim Yamin for
  the stage4 target, but I thought it should be usable on any stage target.

  03 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Moved fstab tweaks all into one location and added make.conf tweak for bug
  #144647.

  03 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  Changed the options to be in alphabetical order so my meatspace logical
  parser can process them better, added the compress and tarball options,
  which are as of yet unused for bug #139390 and request from Tim Yamin, and
  removed the unused -x command line parameter for bug #151405.

  03 Nov 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Added a warning about changing the CHOST setting for bug #142034.

  11 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS,
  modules/generic_stage_target.py, targets/stage1/stage1-controller.sh,
  targets/support/chroot-functions.sh:
  Added initial Gentoo/FreeBSD support. Patch from Diego Pettenò
  <flameeyes@gentoo.org> and attached to bug #150351.

  02 Oct 2006; Chris Gianelloni <wolf31o2@gentoo.org> README, arch/alpha.py,
  arch/amd64.py, arch/arm.py, arch/hppa.py, arch/ia64.py, arch/mips.py,
  arch/ppc.py, arch/ppc64.py, arch/s390.py, arch/sh.py, arch/sparc.py,
  arch/sparc64.py, arch/x86.py, catalyst, files/catalyst.conf,